--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,15 +29,15 @@ dist.jar=${dist.dir}/GMSIwithRFID.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.antlr3-runtime.jar=../../../../usr/share/java/antlr3-runtime.jar
-file.reference.RXTXcomm.jar=../../../../usr/share/java/RXTXcomm.jar
-file.reference.sqljet.jar=../../../../usr/share/java/sqljet.jar
+file.reference.antlr3-runtime.jar=/usr/share/java/antlr3-runtime.jar
+file.reference.jssc.jar=../libs/jssc.jar
+file.reference.sqljet.jar=/usr/share/java/sqljet.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljet.jar}:\
     ${file.reference.antlr3-runtime.jar}:\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.sqljet.jar}:\
+    ${file.reference.jssc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
